--- a/app/src/main/res/layout/activity_a.xml
+++ b/app/src/main/res/layout/activity_a.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ActivityB">
+        tools:context=".ActivityA">
 
     <com.google.android.material.appbar.AppBarLayout
             android:layout_height="wrap_content"
@@ -18,20 +18,12 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
                 app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/activity_top_margin"
-            tools:context=".ActivityB">
-        <WebView
-                android:id="@+id/webview_one"
-                android:layout_width="0dp"
-                android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <include layout="@layout/content_activity"
+             android:layout_marginTop="@dimen/activity_top_margin"
+             android:layout_height="match_parent"
+             android:layout_width="match_parent"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
