--- a/app/src/main/res/layout/activity_c.xml
+++ b/app/src/main/res/layout/activity_c.xml
@@ -25,13 +25,72 @@
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/activity_top_margin"
             tools:context=".ActivityC">
-        <WebView
-                android:id="@+id/webview_one"
+
+        <View
+                android:id="@+id/divider"
                 android:layout_width="0dp"
-                android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
+                android:layout_height="2dp"
+                android:background="?android:attr/listDivider"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        <ImageView
+                android:layout_width="0dp"
+                android:layout_height="0dp" app:srcCompat="@drawable/ic_android_black_24dp"
+                android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="@+id/divider"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/content_description"
+                app:layout_constraintBottom_toTopOf="@+id/divider" android:layout_marginTop="32dp"
+                android:layout_marginEnd="32dp" android:layout_marginBottom="32dp"/>
+        <TextView android:text="@string/my_name"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content" android:layout_marginBottom="8dp"
+                  app:layout_constraintBottom_toBottomOf="@+id/divider" android:layout_marginTop="8dp"
+                  app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="@+id/divider"
+                  android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                  android:layout_marginStart="8dp" android:textStyle="bold" android:textSize="24sp"/>
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:showDividers="middle"
+                android:divider="@drawable/empty_divider"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/divider" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent">
+            <TextView
+                    android:text="@string/track_android"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:id="@+id/textView"/>
+            <TextView
+                    android:text="@string/country_south_africa"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:id="@+id/textView2"/>
+            <TextView
+                    android:text="@string/email_ewaldhorn_gmail_com"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:id="@+id/textView3"/>
+            <TextView
+                    android:text="@string/phone_number_021_555_0014"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:id="@+id/textView4"/>
+            <TextView
+                    android:text="@string/slack_username_ewald"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:id="@+id/textView5"/>
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
